Changelog Acumulus webkoppelingen
=================================

ALL = Alle webshops.
HS  = HikaShop (Joomla)
JOO = Joomla (HikaShop + VirtueMart3)
MA  = Magento (alle ondersteunde versies)
MA1 = Magento 1 (wordt niet meer ondersteund sinds 6.0.0)
MA2 = Magento 2 (MA20, MA21, ... = specifieke minor versie binnen major versie 2)
OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1 (alleen OpenCart 1.5.6.4 wordt nog ondersteund)
OC2 = OpenCart 2 (alleen OpenCart 2.3 wordt nog ondersteund)
OC3 = OpenCart 3
PS  = PrestaShop (1.7.6+) (1.6- wordt niet meer ondersteund sinds 6.0.0)
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.3.0 (2021-06-??)
------------------
Features:
- ALL: Changed the settings under "About your shop":
  * For the fields related to the different tax classes (foreign vat, vat free,
    0 vat) there is now just 1 (drop down) setting instead of the former radio
    button + dropdown. A "Not applicable" value has been added to the drop down.
  * Labels and descriptions for the foreign vat classes has been changed to
    reflect the new rules regarding international sales in the EU that apply as
    of 1 july 2021.
- ALL: Added the ReportThresholdEuCommerce API call to AcumulusClient. It is
  used in the "About Acumulus" block to give you insight into your EU sales
  relative to the threshold.
- ALL: Added the setting 'Percentage EU Omzetdrempel' to 'Uw factuurinstellingen'
  on the advanced settings form. This feature checks your invoices against the
  new EU Commerce threshold above which you should use foreign vat.
- ALL: Added the field vattypeid to the InvoiceAdd API call.

Bugs:
- HS: reinstated use of fallback name for shipping method.
- WC: Sometimes, vat amounts on item lines are stored with a precision of being